20161222
========
#30519 - Improved reaction at response fields that don't match the projected fields.

20160825
========
#20168 - Sharepoint integration: limit the number of relationships to expand
#29883 - In a projection is the first element is a related entity returns null

20160719
========
First version of odata4 wrapper
